--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@heusalagroup/create-backend",
-  "version": "0.0.8",
-  "description": "Create our TypeScript enabled backend projects",
+  "version": "0.0.14",
+  "description": "Create TypeScript enabled backend projects",
   "main": "index.js",
   "bin": "./dist/create-backend.js",
   "scripts": {
