--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@heusalagroup/create-backend",
-  "version": "0.0.29",
-  "description": "Create TypeScript enabled backend projects",
+  "version": "0.0.30",
+  "description": "Create TypeScript enabled NodeJS REST projects inspired from Spring Boot",
   "main": "index.js",
   "bin": "./dist/create-backend.js",
   "scripts": {
@@ -12,6 +12,14 @@
     "type": "git",
     "url": "git+https://github.com/hangovergames/create-backend.git"
   },
+  "tags": [
+    "typescript",
+    "backend",
+    "rest",
+    "nodejs",
+    "spring",
+    "spring-boot"
+  ],
   "author": "Jaakko Heusala <jhh@heusalagroup.fi>",
   "license": "MIT",
   "bugs": {
