--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
-[submodule "src/fi/nor/ts"]
-	path = src/fi/nor/ts
-	url = git@github.com:sendanor/typescript.git
-	branch = main
+[submodule "src/fi/hg/core"]
+	path = src/fi/hg/core
+	url = git@github.com:heusalagroup/fi.hg.core.git
+[submodule "src/fi/hg/create"]
+	path = src/fi/hg/create
+	url = git@github.com:heusalagroup/fi.hg.create.git
