--- a/create.config.json
+++ b/create.config.json
@@ -20,7 +20,7 @@
     "./src/constants/runtime.ts",
     "./src/controllers/BackendController.ts"
   ],
-  "postRename": {
+  "renameFiles": {
     "./gitignore": "./.gitignore"
   },
   "gitSubmodules": [
