--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heusalagroup/create-backend",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Create TypeScript enabled NodeJS REST projects inspired from Spring Boot",
   "main": "index.js",
   "bin": "./dist/create-backend.js",
@@ -20,7 +20,8 @@
     "rest",
     "nodejs",
     "spring",
-    "spring-boot"
+    "spring-boot",
+    "kickstart"
   ],
   "author": "Jaakko Heusala <jhh@heusalagroup.fi>",
   "license": "MIT",
