[#1]: Changed to use our fork of plugin for uglifyJS (https://github.com/heusalagroup/rollup-plugin-uglify) which has the package configuration correctly defined

--- a/create.config.json
+++ b/create.config.json
@@ -57,7 +57,7 @@
     "typescript",
     "tslib",
     "ts-node",
-    "rollup-plugin-uglify",
+    "heusalagroup/rollup-plugin-uglify",
     "rollup",
     "lodash"
   ],
