Fixed git organization to default to heusalagroup (removed @ which is incorrect)

--- a/create.config.json
+++ b/create.config.json
@@ -1,6 +1,6 @@
 {
   "preferredPackageSystem": "npm",
-  "gitOrganization": "@heusalagroup",
+  "gitOrganization": "heusalagroup",
   "organizationName": "Heusala Group",
   "organizationEmail": "info@heusalagroup.fi",
   "sourceDir": "./src",
