--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/hangovergames/create-backend#readme",
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/lodash": "^4.14.179",
+    "@types/node": "^18.11.18",
+    "@types/lodash": "^4.14.191",
     "execa": "^6.1.0",
     "pkg-install": "^1.0.0",
     "@babel/cli": "^7.17.6",
@@ -47,10 +47,10 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
-    "rollup": "^2.68.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-node": "^10.5.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5"
+    "rollup": "^2.79.1",
+    "rollup-plugin-uglify": "github:heusalagroup/rollup-plugin-uglify",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
   }
 }
