Fixes:  - 10 second delay in Docker shutdown https://github.com/heusalagroup/create-backend/issues/11  - Issues with git submodule paths  - Typos in README  - Better production dockerization

--- a/create.config.json
+++ b/create.config.json
@@ -11,7 +11,9 @@
     "./README.md",
     "./gitignore",
     "./Dockerfile",
+    "./Dockerfile.prod",
     "./docker-compose.yml",
+    "./docker-compose.prod.yml",
     "./babel.config.json",
     "./rollup.config.js",
     "./tsconfig.json",
@@ -19,6 +21,7 @@
     "./src/constants/build.ts",
     "./src/constants/runtime.ts",
     "./src/controllers/BackendController.ts",
+    "./scripts/add-hg-module.sh",
     "./scripts/get-all-branches.sh",
     "./scripts/set-branch-main.sh",
     "./scripts/pull-all.sh",
