--- a/create.config.json
+++ b/create.config.json
@@ -65,7 +65,7 @@
     "tslib",
     "ts-node",
     "heusalagroup/rollup-plugin-uglify",
-    "rollup@2.79.1",
+    "rollup",
     "lodash"
   ],
   "gitCommitMessage": "first commit",
